
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eurocodepy"
version = "2024.6.1"
authors = [
  { name="Paulo Cachim", email="pcachim@ua.pt" },
]
description = "A package for eurocode calculations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.9.4",
    "mkdocs[python]>=1.6.1",
    "mkdocs-material>=9.6.14",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
]

[project.urls]
"Homepage" = "https://github.com/pcachim/eurocodepy"
"Bug Tracker" = "https://github.com/pcachim/eurocodepy/issues"
