
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eurocodepy"
version = "2026.1.3"
authors = [
    { name="Paulo Cachim", email="pcachim@ua.pt" },
]
description = "A package for eurocode calculations"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
    "pre-commit>=4.2.0",
]

[project.urls]
"Homepage" = "https://github.com/pcachim/eurocodepy"
"Bug Tracker" = "https://github.com/pcachim/eurocodepy/issues"


[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = ["D100"]       # check available rules by: uv run ruff rules
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
