[metadata]
# replace with your username:
name = eurocodepy
version = 0.1.17
author = Paulo Cachim
author_email = pcachim@ua.pt
description = A package for eurocode calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcachim/eurocodepy
project_urls =
    Bug Tracker = https://github.com/pcachim/eurocodepy/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src